test/cli/scenarios_to_cli/other/scenario_mutate_endpoint/kyverno-test.yaml
name: policy-endpoints
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: policy-endpoints
    rule: pEP
    resource: test-endpoint
    patchedresource: patchedresource.yaml
    kind: Endpoints
    result: pass
