test/cli/scenarios_to_cli/other/scenario_mutate_endpoint/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: policy-endpoints
spec:
  rules:
    - name: pEP
      match:
        all:
        - resources:
            kinds:
            - Endpoints
            selector:
              matchLabels:
                label: test
      mutate:
        patchesJson6902: |-
          [
            {
              "path":"/subsets/0/ports/0/port",
              "op":"replace",
              "value":9663
            },
            {
              "path":"/metadata/labels/isMutated",
              "op":"add",
              "value":"true"
            }
          ]
